# simple_ts

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rules.md
src/: allocator.rs  analyzer.rs  config.rs  lib.rs
src/builtins/: import_meta.rs  known_modules.rs  mod.rs  utils.rs
src/entity/: arguments.rs  array.rs  builtin_fn.rs  class.rs  collector.rs  consumed_object.rs  factory.rs  function.rs  literal.rs  logical_result.rs  mod.rs  operations.rs  primitive.rs  react_element.rs  union.rs  unknown.rs
src/nodes/: mod.rs
src/scope/: call.rs  call_scope.rs  cf.rs  cf_scope.rs  control.rs  exhaustive.rs  mod.rs  namespace.rs  runtime.rs  tree.rs  try_scope.rs  type.rs  utils.rs  variable.rs  variable_scope.rs
src/ty/: accumulator.rs  callable.rs  ctx.rs  enum.rs  facts.rs  generic.rs  get_property.rs  interface.rs  intersection.rs  intrinsics.rs  lowest.rs  match.rs  mod.rs  namespace.rs  operations.rs  print.rs  property_key.rs  record.rs  tuple.rs  union.rs  unresolved.rs  widen.rs  with_ctx.rs
src/type/: callable.rs  facts.rs  generic.rs  mod.rs  namespace.rs  operations.rs  property_key.rs  record.rs  union.rs
src/utils/: ast.rs  callee_info.rs  function_name.rs  mod.rs  serialize.rs
tests/: mod.rs
tests/fixtures/: basic.ts  box.ts  conditional.ts  enum.ts  function.ts  intersection.ts  intrinsic.ts  namespace.ts  record.ts  tsconfig.json  union.ts
tests/snapshots/: test.snap  test.snap.new  test@basic.ts.snap  test@box.ts.snap  test@conditional.ts.snap  test@enum.ts.snap  test@function.ts.snap  test@intersection.ts.snap  test@record.ts.snap  (+3 more)
(+138 files in other folders)
